Fix Indigo alignment.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -77,7 +77,7 @@ html {
     overflow: hidden;
     margin-bottom: 40px;
     text-align: left;
-    padding-top: 30px;
+    padding-top: 60px;
 
 }
 
